--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Odin Recipes</title>
 </head>
 <body>
     <h1>Odin Recipes</h1>
     <a href="recipes/cannelloni.html">Cannelloni</a>
+    <a href="recipes/vanilla-milkshake.html">Vanilla Milkshake</a>
+    <a href="./recipes/good-old-fashioned-pancakes.html">Good Old-Fashioned Pancakes</a>
     
 </body>
 </html>
